add config and run test fun

--- a/src/main/resources/config.yaml
+++ b/src/main/resources/config.yaml
@@ -1,1 +1,2 @@
-testSuiteFilePath:
+testSuiteFilePath: /home/msasin/www/tosterApp/testsuite.json
+testStatusFilePath: /home/msasin/www/tosterApp/logFromTests.json
