--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
-    testCompile group: 'junit', name: 'junit', version: '4.13'
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.6.0-RC1'
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.2.2.RELEASE'
 
 }
