--- a/build.gradle
+++ b/build.gradle
@@ -44,3 +44,11 @@ test {
 
 }
 
+jacocoTestReport {
+    reports {
+        xml.enabled false
+        csv.enabled false
+        html.destination file("${buildDir}/jacocoHtml")
+    }
+}
+
