--- a/src/main/resources/config.yaml
+++ b/src/main/resources/config.yaml
@@ -1,2 +1,2 @@
-testSuiteFilePath: /home/msasin/www/tosterApp/testsuite.json
-testStatusFilePath: /home/msasin/www/tosterApp/logFromTests.json
+testSuiteFilePath: /home/msasin/www/tosterApp/testRuns/testsuite.json
+testStatusFilePath: /home/msasin/www/tost~/www/tosterApp/testRunserApp//testStatuses/logFromTests.json
