--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,6 @@
-spring.datasource.url=jdbc:h2:file:~/www/db/autoTestDb;AUTO_SERVER=TRUE
-
+spring.datasource.url=jdbc:h2:file:~/www/db/autoTestDb2;AUTO_SERVER=TRUE
 spring.datasource.driverClassName=org.h2.Driver
-
 spring.datasource.username=sa
-
 spring.datasource.password=password
-
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
 spring.jpa.hibernate.ddl-auto=update
